# ZaidinCoffeeScraper

./: .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml
src/: main.py  pyproject.toml
src/application/configuration/: appConfig.py  scraping_config.py
src/application/dtos/: coffee_dtos.py
src/application/interfaces/: coffe_pressenter.py  logger.py
src/application/mappers/: coffee_mapper.py
src/application/services/: coffee_scraper.py  scraping_service.py
src/application/use_cases/: coffee_scraper_app.py  fetch_categories.py  fetch_coffees.py
src/di/: diContainer.py
src/domain/configuration/: scraping_config.py
src/domain/entities/: coffee.py  price.py
src/domain/exceptions/: coffee_exceptions.py
src/domain/mappers/: coffee_mapper.py
src/domain/repositories/: category_repository.py  coffee_repository.py
src/domain/services/: coffee_scraper.py  element_finder.py  page_navigator.py  process_detector.py  product_extractors.py  scraping_service.py  web_client.py
src/infrastructure/configuration/: scraping_config.py
src/infrastructure/logging/: config.py  logger.py
src/infrastructure/mappers/: coffee_mapper.py
src/infrastructure/repositories/: category_repository_impl.py  coffee_repository_impl.py
src/infrastructure/scraping/: playwright_client.py
src/infrastructure/services/: coffee_scraper.py  element_finder.py  page_navigator.py  process_detector.py  product_details_extractor.py  product_info_extractor.py  scraping_service.py
src/presentation/presenters/: markdown_presenter.py
(+2 files in other folders)
